Details
-
Bug
-
Status: Resolved
-
Blocker
-
Resolution: Fixed
-
Impala 2.12.0
-
None
-
ghx-label-9
Description
When preads are enabled ADLS scans can fail updating the Hedged reads metrics
(gdb) bt #0 0x0000003346c32625 in raise () from /lib64/libc.so.6 #1 0x0000003346c33e05 in abort () from /lib64/libc.so.6 #2 0x00007f185be140b5 in os::abort(bool) () from /usr/java/jdk1.8.0_121-cloudera/jre/lib/amd64/server/libjvm.so #3 0x00007f185bfb6443 in VMError::report_and_die() () from /usr/java/jdk1.8.0_121-cloudera/jre/lib/amd64/server/libjvm.so #4 0x00007f185be195bf in JVM_handle_linux_signal () from /usr/java/jdk1.8.0_121-cloudera/jre/lib/amd64/server/libjvm.so #5 0x00007f185be0fb03 in signalHandler(int, siginfo*, void*) () from /usr/java/jdk1.8.0_121-cloudera/jre/lib/amd64/server/libjvm.so #6 <signal handler called> #7 0x00007f185bbc1a7b in jni_invoke_nonstatic(JNIEnv_*, JavaValue*, _jobject*, JNICallType, _jmethodID*, JNI_ArgumentPusher*, Thread*) () from /usr/java/jdk1.8.0_121-cloudera/jre/lib/amd64/server/libjvm.so #8 0x00007f185bbc7e81 in jni_CallObjectMethodV () from /usr/java/jdk1.8.0_121-cloudera/jre/lib/amd64/server/libjvm.so #9 0x000000000212e2b7 in invokeMethod () #10 0x0000000002131297 in hdfsGetHedgedReadMetrics () #11 0x00000000011601c0 in impala::io::ScanRange::Close() () #12 0x0000000001158a95 in impala::io::DiskIoMgr::HandleReadFinished(impala::io::DiskIoMgr::DiskQueue*, impala::io::RequestContext*, std::unique_ptr<impala::io::BufferDescriptor, std::default_delete<impala::io::BufferDescriptor> >) () #13 0x0000000001158e1c in impala::io::DiskIoMgr::ReadRange(impala::io::DiskIoMgr::DiskQueue*, impala:---Type <return> to continue, or q <return> to quit--- :io::RequestContext*, impala::io::ScanRange*) () #14 0x0000000001159052 in impala::io::DiskIoMgr::WorkLoop(impala::io::DiskIoMgr::DiskQueue*) () #15 0x0000000000d5fcaf in impala::Thread::SuperviseThread(std::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, std::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, boost::function<void ()()>, impala::ThreadDebugInfo const*, impala::Promise<long>*) () #16 0x0000000000d604aa in boost::detail::thread_data<boost::_bi::bind_t<void, void (*)(std::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, std::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, boost::function<void ()()>, impala::ThreadDebugInfo const*, impala::Promise<long>*), boost::_bi::list5<boost::_bi::value<std::basic_string<char, std::char_traits<char>, std::allocator<char> > >, boost::_bi::value<std::basic_string<char, std::char_traits<char>, std::allocator<char> > >, boost::_bi::value<boost::function<void ()()> >, boost::_bi::value<impala::ThreadDebugInfo*>, boost::_bi::value<impala::Promise<long>*> > > >::run() () #17 0x00000000012d6dfa in ?? () #18 0x0000003347007aa1 in start_thread () from /lib64/libpthread.so.0 #19 0x0000003346ce893d in clone () from /lib64/libc.so.6
CREATE TABLE adls.lineitem (
l_orderkey BIGINT,
l_partkey BIGINT,
l_suppkey BIGINT,
l_linenumber BIGINT,
l_quantity DOUBLE,
l_extendedprice DOUBLE,
l_discount DOUBLE,
l_tax DOUBLE,
l_returnflag STRING,
l_linestatus STRING,
l_commitdate STRING,
l_receiptdate STRING,
l_shipinstruct STRING,
l_shipmode STRING,
l_comment STRING,
l_shipdate STRING
)
STORED AS PARQUET
LOCATION 'adl://foo.azuredatalakestore.net/adls-test.db/lineitem'
select * from adls.lineitem limit 10;
Attachments
Issue Links
- depends upon
-
HDFS-13417 hdfsGetHedgedReadMetrics() crashes when 'fs' is a non-HDFS filesystem
- Open